# StreamForge

./: .gitignore  PERFORMANCE_FINDINGS.md  README.md  SANA_STREAMING.md  install.bat  manifest-sana.yaml  manifest.yaml  pyproject.toml  requirements-sana-win.txt  requirements.txt  start-flux.bat  start-sana.bat  startup.bat  streamforge_design_v1.2.md
docs/: TESTING_OUTPUTS.md
scripts/: check_nunchaku_4b.py  compare_tiny_vae.py  download_models.py  download_sana_models.py  explore_classic_img2img.py  explore_img2img.py  live.py  measure_levers.py  ndi_receiver.py  ndi_test_sender.py  profile_img2img.py  profile_pipeline.py  repro_accel_race.py  repro_concurrent_load.py  restyle_clip.py  run_bench.py  run_live.py  sana_bench.py  sana_gate_sdpa.py  sana_gate_triton.py  sana_longrun_debug.py  sana_norm_debug.py  sana_profile.py  sana_recon.md  sana_runtime_smoke.py  sana_smoke.py  spout_receiver.py  spout_test_sender.py  validate_stack.py  verify_track_a.py  web.py
tests/: test_aspect.py  test_clock.py  test_clock_fill.py  test_color.py  test_conditioning.py  test_control.py  test_filler.py  test_flow.py  test_frame.py  test_harness.py  test_input_sources.py  test_live_control.py  test_manifest.py  test_metrics.py  test_ndi_sink.py  test_preview_encoding.py  test_runner.py  test_runtime_aspect.py  test_runtime_embeds.py  test_sana_backend.py  test_sana_bootstrap.py  test_sana_control.py  test_sana_engine.py  test_sana_runtime_dims.py  test_sinks.py  test_sources.py  test_temporal_runtime.py  test_temporal_worker.py  test_tiny_vae.py  test_warp.py  test_web_api.py  (+3 more)
(+56 files in other folders)
